# RayMarchingGraphicsLibrary

./: Cargo.toml  README.md  evil_man.sdf  new_object.sdf  object_maker.sdfMaker
demo/: Cargo.toml
demo/objects/: a.sdf  e.sdf  golef_cors.sdf  lin_word.sdf  r.sdf  s.sdf
demo/src/: demo_game.rs  main.rs  modlling.rs  sdl2objects.rs
objects/: G.sdf  c.sdf  death.sdf  floor.sdf  p.sdf  sleep.sdf
rmgl/: Cargo.toml  README.md
rmgl/src/: .vert  lib.rs  opengl_objects.rs  ray_marching_objects.rs
src/: .frag  demo.rs  demo_game.rs  input.rs  main.rs  modlling.rs  opengl_shit.rs  ray_marching_objects.rs  sdl2objects.rs  shader_maker.rs
src/objects/: AllBoxes.sdf  BoxFrame.sdf  check.glsl  checker  cool_shit.sdf  coolspere.sdf  deimenShit.sdf  demo_word.sdf  evil_man.sdf  hund.sdf  mode_word.sdf
