[package]
name = "rmgl"
version = "1.0.4"
edition = "2021"
authors = ["Omer Tehar Lev teharlevo@gmail.com"]
description = "A small and kinda working ray marching graphics lib"
license = "MIT"
repository = "https://github.com/teharlevo/RayMarchingGraphicsLibrary"
homepage = "https://github.com/teharlevo/RayMarchingGraphicsLibrary"
documentation = "https://docs.rs/rmgl"

[package.metadata.docs.rs-links]
# Optional: Links for documentation on docs.rs

# Specify the path to your README file
readme = "README.md"

[lib]
name = "rmgl"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
image = "0.25.1"